--- a/src/app/machinery/machinery.component.scss
+++ b/src/app/machinery/machinery.component.scss
@@ -1,14 +1,18 @@
 .machinery {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   padding: 40px 0;
 }
 
 .head {
-
+  width: 50vh;
+  margin: 24px;
 }
 
 .cards {
-  
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 4;
+
 }
