Add base service view with fixed background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <div class="carousel-container">
   <app-home-page></app-home-page>
 </div>
-  <div class="">
+  <div>
   <app-machinery></app-machinery>
-</div>
+    <app-services></app-services>
+    <app-contact-form></app-contact-form>
+    <app-footer></app-footer>
+  </div>
