--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,1 +1,3 @@
-<p>services works!</p>
+<div class="parallax">
+  <app-service-item *ngFor="let service of services" [service]="service"></app-service-item>
+</div>
