modify home page, remove carousel and left single top image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <app-menu-bar></app-menu-bar>
-<div class="carousel-container">
-  <app-home-page></app-home-page>
-</div>
+  <app-home-page id="home" #home></app-home-page>
   <div>
-  <app-machinery></app-machinery>
-    <app-services></app-services>
-    <app-contact-form></app-contact-form>
+  <app-machinery id="machineryComponent" #machineryComponent></app-machinery>
+    <app-services id="servicesComponent" #servicesComponent></app-services>
+    <app-contact-form id="contactFormComponent" #contactFormComponent></app-contact-form>
     <app-footer></app-footer>
   </div>
