--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,5 +1,7 @@
-img {
+.main-container {
+  background-image: url("../../assets/images/machine-1.png");
+  background-size: cover;
+  background-position: center;
   width: 100%;
-  height: 90vh;
-  object-fit: cover;
+  height: 100%;
 }
