--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,7 +1,24 @@
 .main-container {
-  background-image: url("../../assets/images/machine-1.png");
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1) ), url("../../assets/images/machine-1.png");
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
+
+.content {
+  margin-top: 5%;
+  color: white;
+  margin-left: 10%;
+  width: 50%;
+}
+
+h1{
+  font-size: 3rem;
+}
+
