--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -1,8 +1,35 @@
 .navbar {
   overflow: hidden;
-  background-color: #333;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  background-color: #F2EFEF;
+  width: 100%;
+  height: 10vh;
 }
 
+#navbarNav {
+  justify-content: flex-end;
+  margin-right: 15%;
+}
+
+.brand {
+  font-family: Orbitron;
+  font-size: 32px;
+  margin-left: 10%;
+}
+
+//
+//.navbar-light .navbar-brand {
+//  color: black;
+//}
+//
+//.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+//  color: black;
+//}
+//
+//.navbar-light .navbar-nav .nav-link {
+//  color: black;
+//}
+//
+//.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+//  color: black !important;
+//  background-color: lightgray;
+//}
