conntact form first version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
   <app-machinery id="machineryComponent" #machineryComponent></app-machinery>
     <app-services id="servicesComponent" #servicesComponent></app-services>
     <app-contact-form id="contactFormComponent" #contactFormComponent></app-contact-form>
-    <app-footer></app-footer>
+<!--    <app-footer></app-footer>-->
   </div>
