--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -15,3 +15,8 @@
   font-size: 32px;
   margin-left: 10%;
 }
+
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(0,0,0,.5);
+  font-size: 24px;
+}
