--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,5 @@
 <div class="main-container">
   <div class="content">
-    <h3>STABROS usługi rolnicze i nie tylko</h3>
-    <h1>Usługi mulczerem, rębakiem, transportowe, rolnicze, odśnieżanie nawet w najtrudniejszym terenie.</h1>
+    <h1>STABROS usługi rolnicze, mulczerem, rębakiem, transportowe, odśnieżanie.</h1>
   </div>
 </div>
