--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -15,10 +15,10 @@
   margin-top: 5%;
   color: white;
   margin-left: 10%;
-  width: 50%;
+  width: 40%;
 }
 
 h1{
-  font-size: 3rem;
+  font-size: 36px;
 }
 
