--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -7,7 +7,7 @@
     </div>
     <div>
       <h5>Email</h5>
-      <h6>stabros@stabros.pl</h6>
+      <h6>stabros@gmail.com</h6>
     </div>
     <div>
       <h5>STABROS</h5>
