--- a/src/app/machinery/machinery.component.html
+++ b/src/app/machinery/machinery.component.html
@@ -3,7 +3,7 @@
     <div >
       <h1>Park Maszyn</h1>
       <p >Posiadamy maszyny, które sprostają każdemu wyzwaniu</p>
-      <a href="#" class="btn btn-primary">Dowiedz się więcej</a>
+<!--      <a href="#" class="btn btn-primary">Dowiedz się więcej</a>-->
     </div>
 </div>
 <div class="cards">
