--- a/src/app/machinery/machinery.component.scss
+++ b/src/app/machinery/machinery.component.scss
@@ -1,16 +1,33 @@
-.machinery {
-  display: flex;
-  padding: 80px 0;
+.container {
+  padding-top: 5vh;
+  min-height: 100vh;
 }
 
-.head {
+h1 {
+  display: flex;
+  justify-content: center;
+}
+
+.slideContent {
+  display: flex;
+}
+
+.prev, .next {
+  color: transparent;
+  opacity: 0.5;
+}
+
+.current {
+  display: flex;
+  flex-grow: 2;
+  justify-content: center;
   width: 80vh;
-  margin: 24px;
 }
 
-.cards {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  flex-wrap: wrap;
+::ng-deep .carousel-item.active {
+  height: 80vh;
+}
+
+::ng-deep .carousel-control-next-icon {
+
 }
