Fix mobile version for contact form

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,22 +1,17 @@
-<div class="my-container">
+<div class="container">
   <div class="contact-data">
     <h3>DANE KONTAKTOWE</h3>
-    <div>
+    <br>
       <h5>Radosław Stabryła</h5>
       <h6>tel: 530 326 501</h6>
-    </div>
-    <div>
       <h5>Email</h5>
       <h6>stabros@gmail.com</h6>
-    </div>
-    <div>
       <h5>Adres</h5>
       <h6>ul. 1000-lecia 52, 36-200 Brzozów</h6>
-    </div>
   </div>
 
   <div class="form-container">
-    <div class="row justify-content-end">
+    <div class="row">
       <div class="col-10">
         <h2>Napisz do nas</h2>
         <form (ngSubmit)="onSubmit()" #f="ngForm">
