--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -3,7 +3,7 @@
   background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../../assets/images/john-deere-8370r-3288624_1920.jpg");
 
   /* Set a specific height */
-  height: 100vh;
+  min-height: 100vh;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
