--- a/src/app/machinery/machinery.component.scss
+++ b/src/app/machinery/machinery.component.scss
@@ -8,26 +8,27 @@ h1 {
   justify-content: center;
 }
 
-.slideContent {
-  display: flex;
-}
-
-.prev, .next {
-  color: transparent;
-  opacity: 0.5;
-}
-
-.current {
-  display: flex;
-  flex-grow: 2;
-  justify-content: center;
-  width: 80vh;
-}
+//.prev, .next {
+//  //color: transparent;
+//  //opacity: 0.5;
+//}
+//
+//.current {
+//  display: flex;
+//  flex-grow: 2;
+//  justify-content: center;
+//  width: 80vh;
+//}
 
 ::ng-deep .carousel-item.active {
-  height: 80vh;
+display: flex;
+  justify-content: center;
+}
+
+::ng-deep ngb-carousel:focus {
+  outline: none;
 }
 
 ::ng-deep .carousel-control-next-icon {
-
+  opacity: 0.7;
 }
