--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-menu-bar></app-menu-bar>
   <app-home-page id="home" #home></app-home-page>
   <div>
-  <app-machinery id="machineryComponent" #machineryComponent></app-machinery>
+    <app-companyabout id="company" #company></app-companyabout>
+    <app-machinery id="machineryComponent" #machineryComponent></app-machinery>
     <app-services id="servicesComponent" #servicesComponent></app-services>
     <app-contact-form id="contactFormComponent" #contactFormComponent></app-contact-form>
 <!--    <app-footer></app-footer>-->
