--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <a class="navbar-brand brand" href="#home">
-    <img src="../../assets/images/tractor-red.png" height="48px" class="d-inline-block align-top" alt="">
+<!--    <img src="../../assets/images/tractor-red.png" height="48px" class="d-inline-block align-top" alt="">-->
     STABROS
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,6 +10,9 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#home">STABROS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#company">O FIRMIE</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#machineryComponent">PARK MASZYN</a>
