--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -1,6 +1,6 @@
 .navbar {
   overflow: hidden;
-  background-color: #F2EFEF;
+  background-color: #424242;
   width: 100%;
   height: 10vh;
 }
@@ -14,9 +14,11 @@
   font-family: Orbitron;
   font-size: 32px;
   margin-left: 10%;
+  color: lightgray;
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0,0,0,.5);
+  color: lightgray;
   font-size: 16px;
 }
+
