--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="anchor"></div>
 <app-menu-bar></app-menu-bar>
   <app-home-page id="home" #home></app-home-page>
   <div>
@@ -5,5 +6,5 @@
     <app-machinery id="machineryComponent" #machineryComponent></app-machinery>
     <app-services id="servicesComponent" #servicesComponent></app-services>
     <app-contact-form id="contactFormComponent" #contactFormComponent></app-contact-form>
-<!--    <app-footer></app-footer>-->
+    <app-footer></app-footer>
   </div>
