--- a/src/app/companyabout/companyabout.component.html
+++ b/src/app/companyabout/companyabout.component.html
@@ -1,5 +1,13 @@
+<div class="my-container">
 <div class="container">
-  <div class="siema">
-    Czesc siostra
+  <div class="row">
+    <h5>Firma „STABROS” świadczy usługi w zakresie :</h5>
+    <p>Usługi rolnicze – uprawa pól, orka, wynajem ciągników rolniczych, usługi  przyczepą wywrotką, usługi zielonkowe (koszenie traw).</p>
+    <p>Usługi komunalne -  utrzyamanie terenów zielonych – koszenie kosiarką bijakową (rozdrobnienie zielonej masy), kosiarką rotacyjną z możliwością zbioru, wycinka drzew oraz usługi rębakiem.</p>
+    <p>W sezonie zimowym zajmujemy się utrzymaniem dróg, placów, parkingów.</p>
+    <p>Przygotowanie placów pod inwestycje, karczowanie, wyrywanie korzeni, rekultywacja działek rolniczych.<p>
+    <p>Usługi leśne w zakresie wycinki i zrywki drzewa oraz rozdrabniania gałęzi na biomasę drzewną.</p>
+      <p>Świadczymy usługi  na terenie województwa podkarpackiego a w szczególności Sanok, Lesko, Brzozów, Krosno.</p>
+  </div>
   </div>
 </div>
