--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <a class="navbar-brand brand" href="#home">
-<!--    <img src="../../assets/images/tractor-red.png" height="48px" class="d-inline-block align-top" alt="">-->
-    STABROS
+  STABROS
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"
+          aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#home">STABROS</a>
