--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -5,7 +5,7 @@
   height: 10vh;
 }
 
-#navbarNav {
+#myNavbar {
   justify-content: flex-end;
   margin-right: 9%;
 }
@@ -21,4 +21,6 @@
   color: lightgray;
   font-size: 16px;
 }
+
+
 
