--- a/src/app/machinery/machinery-item/machinery-item.component.scss
+++ b/src/app/machinery/machinery-item/machinery-item.component.scss
@@ -1,22 +1,61 @@
 .card {
   align-items: center;
-  margin: 24px;
-  max-width: 50vh;
-  min-height: 450px;
-  border-color: #424242;
-}
-
-.card-title {
-  font-size: 24px;
-  padding: 12px;
-  text-align: center;
-}
-
-.card-img-top {
-  object-fit: cover;
+  margin: 1vw;
+  width: 18vw;
   height: 40vh;
+  overflow: hidden;
 }
 
-p {
+.card .image {
+  height: 100%;
+  overflow: hidden;
+}
+
+.card .image img {
+  height: 100%;
+  object-fit: cover;
+  transition: .5s;
+}
+
+.card:hover .image img {
+  opacity: .5;
+  transform: translateX(30%);/*100%*/
+}
+
+.card .details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%;/*100%*/
+  height: 100%;
+  background: #424242;
+  transition: .5s;
+  transform-origin: left;
+  transform: perspective(2000px) rotateY(-90deg);
+}
+.card:hover .details {
+  transform: perspective(2000px) rotateY(0deg);
+}
+.card .details .center {
+  padding: 20px;
   text-align: center;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.card .details .center h1 {
+  margin: 0;
+  padding: 0;
+  color: #ff3636;
+  line-height: 16px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.card .details .center p {
+  margin: 10px 0;
+  font-size: 12px;
+  padding: 0;
 }
