--- a/src/app/machinery/machinery.component.html
+++ b/src/app/machinery/machinery.component.html
@@ -1,20 +1,15 @@
 <div class="container">
   <h1 class="head">PARK MASZYN</h1>
-<ngb-carousel *ngIf="!mobile" [showNavigationIndicators]="mobile">
-  <div *ngFor="let entry of machinery; ">
-    <ng-template ngbSlide >
-      <app-machinery-item class="prev" [machine]="entry.prev"></app-machinery-item>
-      <app-machinery-item class="current" [machine]="entry.current"></app-machinery-item>
-      <app-machinery-item class="next" [machine]="entry.next"></app-machinery-item>
-    </ng-template>
+
+  <div class="my-item" *ngIf="!mobile">
+    <app-machinery-item *ngFor="let machine of machinery" [machine]="machine.current"></app-machinery-item>
   </div>
-</ngb-carousel>
 
   <ngb-carousel *ngIf="mobile" [showNavigationIndicators]="mobile">
     <div class="myCard" *ngFor="let machine of MACHINES">
       <ng-template ngbSlide>
         <div class="slideContent">
-          <app-machinery-item [machine]="machine"></app-machinery-item>
+          <app-machinery-item-mobile [machine]="machine"></app-machinery-item-mobile>
         </div>
       </ng-template>
     </div>
