style refactoring, update email and background image

--- a/src/app/companyabout/companyabout.component.html
+++ b/src/app/companyabout/companyabout.component.html
@@ -7,7 +7,7 @@
     <p>W sezonie zimowym zajmujemy się utrzymaniem dróg, placów, parkingów.</p>
     <p>Przygotowanie placów pod inwestycje, karczowanie, wyrywanie korzeni, rekultywacja działek rolniczych.<p>
     <p>Usługi leśne w zakresie wycinki i zrywki drzewa oraz rozdrabniania gałęzi na biomasę drzewną.</p>
-      <p>Świadczymy usługi  na terenie województwa podkarpackiego a w szczególności Sanok, Lesko, Brzozów, Krosno.</p>
+      <p>Świadczymy usługi  na terenie województwa podkarpackiego a w szczególności Bieszczady, Sanok, Lesko, Brzozów, Krosno.</p>
   </div>
   </div>
 </div>
