--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -5,7 +5,7 @@
       <h5>Radosław Stabryła</h5>
       <h6>tel: 530 326 501</h6>
       <h5>Email</h5>
-      <h6>stabros@gmail.com</h6>
+      <h6>stabros@interia.com</h6>
       <h5>Adres</h5>
       <h6>ul. 1000-lecia 52, 36-200 Brzozów</h6>
   </div>
