--- a/src/app/machinery/machinery.component.scss
+++ b/src/app/machinery/machinery.component.scss
@@ -4,6 +4,11 @@
   padding-bottom: 40px;
 }
 
+.item-container {
+  width: 23%;
+  margin: 0.5%;
+}
+
 h1 {
   display: flex;
   justify-content: center;
