fix navigation - navigation without reloading, add tel and mail tags, add google analytics support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="anchor"></div>
 <app-menu-bar></app-menu-bar>
-  <app-home-page id="home" #home></app-home-page>
+  <app-home-page id="stabros" #stabros></app-home-page>
   <div>
-    <app-companyabout id="company" #company></app-companyabout>
-    <app-machinery id="machineryComponent" #machineryComponent></app-machinery>
-    <app-services id="servicesComponent" #servicesComponent></app-services>
-    <app-contact-form id="contactFormComponent" #contactFormComponent></app-contact-form>
+    <app-companyabout id="o_firmie" #o_firmie></app-companyabout>
+    <app-machinery id="park_maszyn" #park_maszyn></app-machinery>
+    <app-services id="uslugi" #uslugi></app-services>
+    <app-contact-form id="kontakt" #kontakt></app-contact-form>
     <app-footer></app-footer>
   </div>
