--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -33,6 +33,10 @@ h5{
   font-weight: bold;
 }
 
+.contact-item {
+
+}
+
 @media screen and (max-width: 800px) {
   .container {
     flex-direction: column;
