--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -3,9 +3,9 @@
     <h3>DANE KONTAKTOWE</h3>
     <br>
       <h5>Radosław Stabryła</h5>
-      <h6>tel: 530 326 501</h6>
+      <a class="contact-item" href="tel:530326501">530 326 501</a>
       <h5>Email</h5>
-      <h6>stabros@interia.com</h6>
+      <a class="contact-item" href="mailto:stabros@interia.com">stabros@interia.com</a>
       <h5>Adres</h5>
       <h6>ul. 1000-lecia 52, 36-200 Brzozów</h6>
   </div>
@@ -14,34 +14,4 @@
       <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
     </agm-map>
   </div>
-<!--  <div class="form-container">-->
-<!--    <div class="row">-->
-<!--      <div class="col-10">-->
-<!--        <h2>Napisz do nas</h2>-->
-<!--        <form (ngSubmit)="onSubmit()" #f="ngForm">-->
-<!--          <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">-->
-<!--            <div class="form-group">-->
-<!--              <label for="email">Adres email:</label>-->
-<!--              <input type="email" class="form-control" id="email" ngModel name="email" required email-->
-<!--                     #emailVal="ngModel">-->
-<!--              <small class="form-text text-muted" *ngIf="!emailVal.valid && emailVal.touched">Proszę podać prawidłowy-->
-<!--                adres email</small>-->
-<!--              <label for="subject">Tytuł:</label>-->
-<!--              <select id="subject" class="form-control" [ngModel]="defaultQuestion" name="subject" required>-->
-<!--                <option name="defultSubject" *ngFor="let subject of subjects">{{subject}}</option>-->
-<!--              </select>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="form-group">-->
-<!--            <label>Wiadomość:</label>-->
-<!--            <textarea class="form-control" rows="6" name="questionAnswer" ngModel required-->
-<!--                      #question="ngModel"></textarea>-->
-<!--            <small class="form-text text-muted" *ngIf="!question.valid && question.touched">Wiadomość nie może być-->
-<!--              pusta</small>-->
-<!--          </div>-->
-<!--          <button type="submit" class="btn btn-secondary" [disabled]="!f.valid">Wyślij</button>-->
-<!--        </form>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
 </div>
